tests/wpt/tests/third_party/test262/test/built-ins/RegExp/property-escapes/loose-matching-06-negated.js
// Copyright 2018 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Loose matching must not be applied when matching properties and values in
  Unicode property escapes.
esid: sec-static-semantics-unicodematchproperty-p
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/\P{General_Category = Uppercase_Letter}/u;
